// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth search results form no results should render correctly with no user and no results 1`] = `
<div>
  <div
    className="sc-fznyAO fLoaye"
  >
    <div
      className="sc-fznKkj kxQUeY"
    >
      <form
        onSubmit={[Function]}
      >
        <label
          className="sc-AxmLO iStjYY"
          htmlFor="user"
        >
          <span
            className="sc-fzozJi iCqBeU"
          >
            Username or email address
          </span>
          <input
            className="sc-fzplWN dzvIFu"
            defaultValue=""
            id="user"
            name="user"
            onChange={[Function]}
            type="text"
          />
        </label>
        <button
          className="sc-AxheI gQGUsF"
          disabled={false}
          id="search-button"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Auth search results form some results should render correctly with user and results 1`] = `
<div>
  <div
    className="sc-fznyAO fLoaye"
  >
    <div
      className="sc-fznKkj kxQUeY"
    >
      <form
        onSubmit={[Function]}
      >
        <label
          className="sc-AxmLO iStjYY"
          htmlFor="user"
        >
          <span
            className="sc-fzozJi iCqBeU"
          >
            Username or email address
          </span>
          <input
            className="sc-fzplWN dzvIFu"
            defaultValue="someuser"
            id="user"
            name="user"
            onChange={[Function]}
            type="text"
          />
        </label>
        <button
          className="sc-AxheI gQGUsF"
          disabled={false}
          id="search-button"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
  </div>
  <table
    className="sc-AxgMl EndUi"
  >
    <tbody
      className="sc-AxirZ bJCmFu"
    >
      <tr
        className="sc-AxhUy fxWvvr"
      >
        <th
          className="sc-AxhCb kcuEKC"
        >
          Name
        </th>
        <th
          className="sc-AxhCb kcuEKC"
        >
          Username
        </th>
        <th
          className="sc-AxhCb kcuEKC"
        >
          Email
        </th>
        <th
          className="sc-AxhCb kcuEKC"
        >
          Locked
        </th>
        <th
          className="sc-AxhCb kcuEKC"
        >
          Enabled
        </th>
        <th
          className="sc-AxhCb kcuEKC"
        >
           
        </th>
      </tr>
      <tr
        className="sc-AxhUy fxWvvr"
      >
        <td
          className="sc-AxhCb iBdqAC"
        >
          Auth
           
          Adm
        </td>
        <td
          className="sc-AxhCb iBdqAC"
        >
          AUTH_ADM
        </td>
        <td
          className="sc-AxhCb iBdqAC"
        >
          auth_test2@digital.justice.gov.uk
        </td>
        <td
          className="sc-AxhCb iBdqAC"
        >
          Yes
        </td>
        <td
          className="sc-AxhCb iBdqAC"
        >
          No
        </td>
        <td
          className="sc-AxhCb iBdqAC"
        >
          <button
            className="sc-AxheI cSGdvX"
            disabled={false}
            id="edit-button-AUTH_ADM"
            onClick={[Function]}
            value={0}
          >
            Edit
          </button>
        </td>
      </tr>
      <tr
        className="sc-AxhUy fxWvvr"
      >
        <td
          className="sc-AxhCb iBdqAC"
        >
          Auth
           
          Expired
        </td>
        <td
          className="sc-AxhCb iBdqAC"
        >
          AUTH_EXPIRED
        </td>
        <td
          className="sc-AxhCb iBdqAC"
        >
          auth_test2@digital.justice.gov.uk
        </td>
        <td
          className="sc-AxhCb iBdqAC"
        >
          No
        </td>
        <td
          className="sc-AxhCb iBdqAC"
        >
          Yes
        </td>
        <td
          className="sc-AxhCb iBdqAC"
        >
          <button
            className="sc-AxheI cSGdvX"
            disabled={false}
            id="edit-button-AUTH_EXPIRED"
            onClick={[Function]}
            value={1}
          >
            Edit
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
